changes font CSS reference

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <title>Ferretti Hair Design - Home</title>
 
 <style>
+@font-face {
+	font-family: Elsie; src: url('ElsieSwashCaps-Regular.ttf'); 
+} 
+
 body {
 	/*background-color: #000000;*/
 	background-color: black;
@@ -36,7 +40,7 @@ img {
     padding:20px;
 	text-decoration: none;
 	/*font-weight: 525;*/
-	font-family: "Elsie Swash Caps";
+	font-family: Elsie;
 	color: white;
 	font-size: 18px;
 	letter-spacing: 0.6em;
