fixes HOME link issue

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ li {
 <h1><img src="Images/logo2.png" alt="mainLogo" width="450" height="214" class="center" /></h1>
 
 <ul class="nav">
-  <li><a href="/"><b>HOME</a></li>
-  <li><a href="/about/">ABOUT</a></li>
+  <li><a href="/Ferretti-Hair-Design/"><b>HOME</a></li>
+  <li><a href="/services/">SERVICES</a></li>
   <li><a href="/work/">WORK</a></li>
   <li><a href="/clients/">LOCATION</a></li>
   <li><a href="/contact/">CONTACT</b></a></li>
