--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Ferretti Hair Design - Home</title>
 
+/* ICONS */
+<link rel="apple-touch-icon" sizes="57x57" href="Images/icon/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="Images/icon/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="Images/icon/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="Images/icon/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="Images/icon/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="Images/icon/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="Images/icon/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="Images/icon/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="Images/icon/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="Images/icon/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="Images/icon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="Images/icon/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="Images/icon/favicon-16x16.png">
+<link rel="manifest" href="Images/icon/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="Images/icon/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
+
+
 <style>
 @font-face {
 	font-family: Elsie; src: url('ElsieSwashCaps-Regular.ttf'); 
