--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Ferretti Hair Design - Home</title>
 
+<link rel="icon" href="favicon.ico">
 
 <style>
 @font-face {
