--- a/index.html
+++ b/index.html
@@ -53,14 +53,11 @@ img {
 	font-size: 24px;
 	letter-spacing: 0.1em;
 }
-/*
-#nav a:hover {
-	background-color: #F0F;
-}*/
 
-#nav a:active {
+#nav a:hover, a:active {
 	background-color: #F0F;
 }
+
 
 /*
 .nav{
