--- a/index.html
+++ b/index.html
@@ -1,63 +1,59 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Ferretti Hair Design - Home</title>
-
-<link rel="icon" href="favicon.ico">
-
-<style>
+      <head>
+      <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+      <title>Ferretti Hair Design - Home</title>
+      <link rel="icon" href="favicon.ico">
+      <style>
 @font-face {
-	font-family: Elsie; src: url('ElsieSwashCaps-Black.ttf'); 
-} 
-
+	font-family: Elsie;
+	src: url('ElsieSwashCaps-Black.ttf');
+}
 body {
 	/*background-color: #000000;*/
-	background-color: black;
+	background-color: #666;
 }
-
 img {
 	display: block;
-	margin-left:auto;
-	margin-right: auto;
-	/*border: 4px white solid;*/
+	margin-left: auto;
+	margin-right: auto;/*border: 4px white solid;*/
 }
-
 #nav {
-    border: 5px solid #ccc;
-    border-width:5px 1;
+	border: 5px solid #ccc;
+	border-width: 5px 1;
 	border-right-color: black;
 	border-left-color: black;
 	border-top-color: white;
 	background-color: black;
-    list-style:none;
-    margin:10;
-
-    padding: 0;
-    text-align:center;
-	
+	list-style: none;
+	margin: 10;
+	margin-left: 100px;
+	margin-right: 100px;
+	padding: 0;
+	text-align: center;
 }
-
-
 #nav li {
-    display:inline;
-
+	display: inline;
 }
-
-#nav a{
-    display:inline-block;
-    padding:20px;
+#nav a {
+	display: inline-block;
+	padding: 20px;
 	text-decoration: none;
 	font-family: Elsie;
 	color: white;
 	font-size: 24px;
 	letter-spacing: 0.1em;
 }
-
 #nav a:hover, a:active {
 	background-color: #F0F;
 }
-
+#container {
+	width = 960px;
+	margin-left: 100px;
+	margin-right: 100px;
+	background-color: black;
+	margin: 2 auto;
+}
 
 /*
 .nav{
@@ -96,10 +92,8 @@ img {
 }
 
 <ul class="nav">*/
-
-
 </style>
-<script type = "text/javascript">
+      <script type = "text/javascript">
           function displayNextImage() {
               x = (x === images.length - 1) ? 0 : x + 1;
 			 
@@ -121,19 +115,20 @@ img {
           images[1] = "Images/two.jpg";
           images[2] = "Images/three.jpg";
       </script>
-</head>
-
-<body onload="startTimer()">
-
+      </head>
+      
+      <body onload="startTimer()">
+      <div id="container">
 <h1><img src="Images/logo2.png" alt="mainLogo" width="450" height="214" class="center" /></h1>
-
 <ul id="nav">
-  <li><a href="/Ferretti-Hair-Design/">Home</a></li>
-  <li><a href="/services/">Services</a></li>
-  <li><a href="/book/">Book Now</a></li>
-  <li><a href="/location/">Location</a></li>
-</ul>
-<p>&nbsp;</p>
+        <li><a href="/Ferretti-Hair-Design/">Home</a></li>
+        <li><a href="/services/">Services</a></li>
+        <li><a href="/book/">Book Now</a></li>
+        <li><a href="/location/">Location</a></li>
+      </ul>
+
+<p><font color= white>Mobile & IN Home Service</font></p>
 <p><img src="Images/three.jpg" name="img" id="img" /></p>
 </body>
+      </div>
 </html>
