auto adjusts images when screen is small

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;/*border: 4px white solid;*/
+	max-height: 100%;
+	max-width: 100%;
+	
 }
 #nav {
 	border: 5px solid #ccc;
