--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ img {
 	background-color: black;
 	list-style: none;
 	margin: 10;
-	margin-left: 100px;
-	margin-right: 100px;
+	/*margin-left: 100px;
+	margin-right: 100px;*/
 	padding: 0;
 	text-align: center;
 }
