added links to social media icons

--- a/index.html
+++ b/index.html
@@ -178,14 +178,16 @@ body {
       <div id="container">
 <div class="row">
   <div class="column" style="background-color: black;">
-   
+  
   </div>
   <div class="column" style="background-color:black;">
     <img src="Images/logo2.png" alt="mainLogo"  class="center" id="logo"/>
   </div>
   <div class="column" style="background-color: black;">
-   <img src="Images/facebook.png" id="facebookIcon" align="right"/>
-   <img src="Images/instagram.png" id="instagramIcon" align="right"/>
+   <a href="https://www.facebook.com/FerrettiHairDesign/" target="_blank">
+   <img src="Images/facebook.png" id="facebookIcon" align="right"/></a>
+   <a href="https://www.instagram.com/ferrettihairdesign/" target="_blank">
+   <img src="Images/instagram.png" id="instagramIcon" align="right"/></a>
   </div>
 </div>
 
@@ -193,13 +195,16 @@ body {
 <ul id="nav">
   <li><a href="/Ferretti-Hair-Design/">Home</a></li>
         <li><a href="/services/">Services</a></li>
-        <li><a href="/book/">Book Now</a></li>
+        <li><a href="/book/">Book Online</a></li>
         <li><a href="/location/">Location</a></li>
       </ul>
 
-<p><font color= white> </font></p>
-<p><img src="Images/three.jpg" name="img" id="mainImg" /></p>
 
+    <p><img src="Images/three.jpg" name="img" id="mainImg" /></p>
+   
+    
+
+<p><font color=white size=2><center><br /><br />&copy 2018 Ferretti Hair Design</p><br />
 </body>
 </div>
 </html>
