mainLogo added link to home

--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@ body {
   
   </div>
   <div class="column" style="background-color:black;">
-    <img src="Images/logo2.png" alt="mainLogo"  class="center" id="logo"/>
+    <a href="/Ferretti-Hair-Design/">
+    <img src="Images/logo2.png" alt="mainLogo"  class="center" id="logo"/></a>
   </div>
   <div class="column" style="background-color: black;">
    <a href="https://www.facebook.com/FerrettiHairDesign/" target="_blank">
