added phone number

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@ body {
 	clear: both;
 }
 
+#phone {
+	display: block;
+	margin-left: 20%;
+	margin-top: 20%;
+	font-size: 2.5vw;
+}
 #logo {
 	display: block;
 	padding-top: 0%;
@@ -91,11 +97,13 @@ body {
 	background-color: #F0F;
 }
 #container {
+	border-radius: 20px;
 	width = 960px;
 	margin-left: 5%;
 	margin-right: 5%;
+	margin-top: 2%;
+	margin-bottom: 2%;
 	background-color: black;
-	margin: 2 auto;
 }
 
 #mainImg {
@@ -108,46 +116,7 @@ body {
 	max-width: 90%;*/
 	height: auto;
 	width: 40%;
-	
 }
-
-/*
-.nav{
-    border: 20px solid #ccc;
-    border-width:2px 0;
-	border-top-color: white;
-    list-style:none;
-    margin:10;
-	margin-left: 100px;
-	margin-right: 100px;
-    padding:0;
-    text-align:center;
-}
-.nav li{
-    display:inline;
-	border-right: 2px solid white;
-}
-
-.nav li:last-child a {
-    border-right: none;
-}
-
-.nav a{
-    display:inline-block;
-    padding:20px;
-	text-decoration: none;
-	font-weight: 525;
-	font-family: Elsie;
-	color: white;
-	font-size: 21px;
-	letter-spacing: 0.6em;
-}
-
-.nav a:hover 
-	background-color: #F0F;
-}
-
-<ul class="nav">*/
 
       </style>
       <script type = "text/javascript">
@@ -178,14 +147,14 @@ body {
       
       <div id="container">
 <div class="row">
-  <div class="column" style="background-color: black;">
-  
+  <div class="column" style="background-color: transparent;">
+  <font face="Elsie Swash Caps Regular" color=white id="phone">(416)568-8433</font>
   </div>
-  <div class="column" style="background-color:black;">
+  <div class="column" style="background-color: transparent;">
     <a href="/Ferretti-Hair-Design/">
     <img src="Images/logo2.png" alt="mainLogo"  class="center" id="logo"/></a>
   </div>
-  <div class="column" style="background-color: black;">
+  <div class="column" style="background-color: transparent;">
    <a href="https://www.facebook.com/FerrettiHairDesign/" target="_blank">
    <img src="Images/facebook.png" id="facebookIcon" align="right"/></a>
    <a href="https://www.instagram.com/ferrettihairdesign/" target="_blank">
@@ -200,8 +169,6 @@ body {
         <li><a href="/book/">Book Online</a></li>
         <li><a href="/location/">Location</a></li>
       </ul>
-
-
     <p><img src="Images/three.jpg" name="img" id="mainImg" /></p>
 
 
