--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@ body {
       <div id="container">
 <div class="row">
   <div class="column" style="background-color: transparent;">
-  <font face="Elsie Swash Caps Regular" color=white id="phone">(416)568-8433</font>
+  <a href="tel:14165688433" style="text-decoration: none">
+  <font face="Elsie Swash Caps Regular" color=white id="phone">(416)568-8433</font></a>
   </div>
   <div class="column" style="background-color: transparent;">
     <a href="/Ferretti-Hair-Design/">
