--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 	font-family: Elsie;
 	src: url('ElsieSwashCaps-Black.ttf');
 }
+
+@font-face {
+	font-family: ElsieRegular;
+	src: url('ElsieSwashCaps-Regular.ttf');
+}
 body {
 	/*background-color: #000000;*/
 	background-color: #666;
@@ -35,6 +40,8 @@ body {
 	margin-left: 20%;
 	margin-top: 20%;
 	font-size: 2.5vw;
+	font-family: ElsieRegular;
+	color: white;
 }
 #logo {
 	display: block;
@@ -149,7 +156,7 @@ body {
 <div class="row">
   <div class="column" style="background-color: transparent;">
   <a href="tel:14165688433" style="text-decoration: none">
-  <font face="Elsie Swash Caps Regular" color=white id="phone">(416)568-8433</font></a>
+  <font id="phone">(416)568-8433</font></a>
   </div>
   <div class="column" style="background-color: transparent;">
     <a href="/Ferretti-Hair-Design/">
