--- a/index.html
+++ b/index.html
@@ -120,23 +120,23 @@
 	}
 	
 	#textContainer {
-		/*border: 0.25vw solid #ccc;*/
-		border-radius: 20px;
 		display: block;
-		margin-top: 3%;
+		margin-top: 5%;
+		padding-top: 4%;
 		margin-left: auto;
-		margin-right: 10%;
+		margin-right: 15%;
 		height: 28vw;
 		width: 80%;
 		vertical-align: middle;
+		text-align: center;
 	}
 	
 	#mainImg {
 		border: 0.25vw solid #ccc;
 		border-radius: 20px;
 		display: block;
-		margin-top: 3%;
-		margin-left: 10%;
+		margin-top: 5%;
+		margin-left: 15%;
 		margin-right: auto;
 		height: 28vw;
 		width: 80%;
@@ -195,7 +195,8 @@
     <div class="row">
     	<div class="columnTwo"><img src="Images/three.jpg" name="img" id="mainImg" /></div>
         <div class="columnTwo">
-          <div id="textContainer"><font color=white style="font-size: 2.5vw;"><i>Ferretti Hair Design is a home based hair studio, that also provides mobile hair services to the Bathurst Manor and surrounding areas. Ferretti Hair Design keeps current with the latest trends and provides full service at affordable prices</i></font></div>
+          <div id="textContainer"><font color=white style="font-size: 2.5vw;"><i>
+          Ferretti Hair Design is a home based hair studio, that also provides mobile hair services to the Bathurst Manor and surrounding areas. Ferretti Hair Design keeps current with the latest trends and provides full service at affordable prices</i></font></div>
         
         </div>
     </div>
