--- a/location.html
+++ b/location.html
@@ -167,7 +167,7 @@
         <li><a href="/Ferretti-Hair-Design/">Home</a></li>
         <li><a href="/services/">Services</a></li>
         <li><a href="/book/">Book Online</a></li>
-        <li><a href="/location.html/">Location</a></li>
+        <li><a href="/Ferretti-Hair-Design/location.html/">Location</a></li>
 	</ul>
 
 	<center><br /><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1386.4492802780233!2d-79.45994639384341!3d43.75707938782417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b320618aa81d5%3A0x266882c031dba700!2sBrighton+Ave+%26+Honiton+St%2C+Toronto%2C+ON!5e0!3m2!1sen!2sca!4v1531243443484" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></center><br />
