actually now fixed path to location page

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <li><a href="/Ferretti-Hair-Design/">Home</a></li>
         <li><a href="/services/">Services</a></li>
         <li><a href="/book/">Book Online</a></li>
-        <li><a href="/Ferretti-Hair-Design/location.html/">Location</a></li>
+        <li><a href="/Ferretti-Hair-Design/location.html">Location</a></li>
 	</ul>
     
     <div class="row">
