--- a/location.html
+++ b/location.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Location</title>
+<title>Ferretti Hair Design - Location</title>
 <style>
 	@font-face {
 		font-family: Elsie;
