--- a/location.html
+++ b/location.html
@@ -165,8 +165,8 @@
     
     <ul id="nav">
         <li><a href="/Ferretti-Hair-Design/">Home</a></li>
-        <li><a href="/services/">Services</a></li>
-        <li><a href="/book/">Book Online</a></li>
+        <li><a href="/Ferretti-Hair-Design/services.html">Services</a></li>
+        <li><a href="/Ferretti-Hair-Design/book.html">Book Online</a></li>
         <li><a href="/Ferretti-Hair-Design/location.html">Location</a></li>
 	</ul>
 
