--- a/location.html
+++ b/location.html
@@ -156,12 +156,12 @@
             <font id="phone">(416)568-8433</font></a></div>
         <div class="column" style="background-color: transparent;">
             <a href="/Ferretti-Hair-Design/">
-            <img src="Images/logo2.png" alt="mainLogo"  class="center" id="logo"/></a></div>
+            <img src="images/logo2.png" alt="mainLogo"  class="center" id="logo"/></a></div>
         <div class="column" style="background-color: transparent;">
             <a href="https://www.facebook.com/FerrettiHairDesign/" target="_blank">
-            <img src="Images/facebook.png" id="facebookIcon" align="right"/></a>
+            <img src="images/facebook.png" id="facebookIcon" align="right"/></a>
             <a href="https://www.instagram.com/ferrettihairdesign/" target="_blank">
-            <img src="Images/instagram.png" id="instagramIcon" align="right"/></a></div>
+            <img src="images/instagram.png" id="instagramIcon" align="right"/></a></div>
     </div>
     
     <ul id="nav">
