--- a/services.html
+++ b/services.html
@@ -162,7 +162,7 @@
             <font id="phone">(416)568-8433</font></a></div>
         <div class="column" style="background-color: transparent;">
             <a href="/Ferretti-Hair-Design/">
-            <img src="/images/logo2.png" alt="mainLogo"  class="center" id="logo"/></a></div>
+            <img src="images/logo2.png" alt="mainLogo"  class="center" id="logo"/></a></div>
         <div class="column" style="background-color: transparent;">
             <a href="https://www.facebook.com/FerrettiHairDesign/" target="_blank">
             <img src="images/facebook.png" id="facebookIcon" align="right"/></a>
