--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 	body {
 		/*background-color: #000000;*/
 		background-color: #666;
+		width: 1250px;
+		margin: auto;
 	}
 	
 	* {
@@ -53,9 +55,13 @@
 	
 	#phone {
 		display: block;
-		margin-left: 20%;
+		/*margin-left: 20%;
 		margin-top: 20%;
-		font-size: 2.5vw;
+		font-size: 2.5vw;*/
+		margin-left: 100px;
+		margin-top: 75px;
+		font-size: 32px;
+		
 		font-family: ElsieRegular;
 		color: white;
 	}
@@ -66,24 +72,32 @@
 		/*margin-left: 2.5%;*/
 		margin-left: auto;
 		margin-right: auto;
-		width: 75%;
+/*		width: 75%;*/
+		width: 300px;
 		pointer-events: none;
 	}
 	
 	#facebookIcon {
 		display: block;
-		width: 10%;
 		height: auto;
+/*		width: 10%;
 		margin-top: 20%;
-		margin-right: 20%;
+		margin-right: 20%;*/
+		width: 50px;
+		margin-right: 100px;
+		margin-top: 75px;
+		
 	}
 	
 	#instagramIcon {
 		display: block;
-		width: 10%;
 		height: auto;
+		/*width: 10%;
 		margin-top: 20%;
-		margin-right: 10%;
+		margin-right: 10%;*/
+		margin-right: 50px;
+		margin-top: 75px;
+		width: 50px;
 	}
 	
 	#nav {
@@ -105,15 +119,22 @@
 	}
 	#nav a {
 		display: inline-block;
-		padding-top: 1%;
+		/*padding-top: 1%;
 		padding-bottom: 1%;
 		padding-left: 2%;
-		padding-right: 2%;
+		padding-right: 2%;*/
+		padding-top: 10px;
+		padding-bottom: 10px;
+		padding-left: 20px;
+		padding-right:20px;
+		
+		
 		text-decoration: none;
 		background-color: #333;
 		font-family: Elsie;
 		color: white;
-		font-size: 2vw;
+		/*font-size: 2vw;*/
+		font-size: 32px;
 		letter-spacing: 0.1em;
 	}
 	#nav a:hover, a:active {
@@ -122,37 +143,47 @@
 	
 	#container {
 		border-radius: 20px;
-		width = 960px;
-		margin-left: 5%;
-		margin-right: 5%;
-		margin-top: 2%;
-		margin-bottom: 2%;
+		display: block;
+		/*width = 960px;
+		margin-left: 2%;
+		margin-right: 2%;
+		margin-top: 1%;
+		margin-bottom: 1%;*/
+		margin: auto;
 		background-color: black;
 	}
 	
 	#textContainer {
 		display: block;
-		margin-top: 5%;
-		padding-top: 4%;
 		margin-left: auto;
+		/*margin-top: 5%;
+		padding-top: 4%;
 		margin-right: 15%;
 		height: 28vw;
-		width: 80%;
+		width: 80%;*/
+		margin-top: 100px;
+		padding-top: 40px;
+		margin-right: 50px;
+		height: 300px;
 		vertical-align: middle;
 		text-align: center;
 		font-family: SansationLight;
-		line-height: 3vw;
+		line-height: 40px;
+		font-size: 29px;
 }
 	
 	#mainImg {
 		border: 0.1vw solid #ccc;
 		border-radius: 20px;
 		display: block;
-		margin-top: 5%;
+		/*margin-top: 5%;
 		margin-left: 15%;
 		margin-right: auto;
 		height: 28vw;
-		width: 80%;
+		width: 80%;*/
+		margin-top: 50px;
+		margin-left: 50px;
+		height: 400px;
 		
 		pointer-events: none;
 	}
@@ -209,13 +240,13 @@
     <div class="row">
     	<div class="columnTwo"><img src="images/three.jpg" name="img" id="mainImg" /></div>
         <div class="columnTwo">
-          <div id="textContainer"><font color=white style="font-size: 2.5vw;">
+          <div id="textContainer"><font color=white >
           Ferretti Hair Design is a home based hair studio that also provides mobile hair services to the Bathurst Manor and surrounding areas. Ferretti Hair Design keeps current with the latest trends and provides full service at affordable prices.</font></div>
         
         </div>
     </div>
     
-	<p><font color=white style="font-size: 0.85vw; font-family: ElsieRegular;"><center><br /><br />&copy 2018 Ferretti Hair Design</center></font></p><br />
+	<p><font color=white style="font-size: 0.85vw; font-family: ElsieRegular;"><center><br /><br /><br />&copy 2018 Ferretti Hair Design</center></font></p><br />
 
 </body>
 </div>
