--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
 		border-radius: 20px;
 		display: block;
 		margin: auto;
+		margin-top: 25px;
+		margin-bottom: 25px;
 		background-color: black;
 	}
 	
@@ -149,7 +151,7 @@
 		margin-top: 50px;
 		margin-left: 50px;
 		height: 400px;
-		pointer-events: none;
+			pointer-events: none;
 	}
 
       </style>
@@ -210,7 +212,7 @@
         </div>
     </div>
     
-	<p><font color=white style="font-size: 0.85vw; font-family: ElsieRegular;"><center><br /><br /><br />&copy 2018 Ferretti Hair Design</center></font></p><br />
+	<p><font color=white style="font-size: 12px; font-family: ElsieRegular;"><center><br /><br /><br />&copy 2018 Ferretti Hair Design</center></font></p><br />
 
 </body>
 </div>
