added titles to other pages

--- a/book.html
+++ b/book.html
@@ -202,8 +202,10 @@
         <li><a href="/Ferretti-Hair-Design/book.html">Book Online</a></li>
         <li><a href="/Ferretti-Hair-Design/location.html">Location</a></li>
 	</ul>
-    <br /><br />
     
+    <div style="margin:auto; margin-top: 50px; text-align: center; font-family: ElsieRegular;  width: 400px;"> 
+    	<font color=white style="font-size: 46px;">Book Online</font>
+    </div>
 	<p><font color=white style="font-size: 12px; font-family: ElsieRegular;"><center><br /><br /><br />&copy 2018 Ferretti Hair Design</center></font></p><br />
 
 </body>
