--- a/location.html
+++ b/location.html
@@ -151,7 +151,7 @@
 		margin-top: 50px;
 		margin-left: 50px;
 		height: 400px;
-			pointer-events: none;
+		pointer-events: none;
 	}
 
       </style>
@@ -174,7 +174,7 @@
 
           var images = [], x = -1;
           images[0] = "images/one.jpg";
-          images[1] = "images/two.jpg";
+          images[1] = "images/two.png";
           images[2] = "images/three.jpg";
       </script>
 </head>
@@ -199,7 +199,6 @@
     <ul id="nav">
         <li><a href="/Ferretti-Hair-Design/">Home</a></li>
         <li><a href="/Ferretti-Hair-Design/services.html">Services</a></li>
-        <li><a href="/Ferretti-Hair-Design/book.html">Book Online</a></li>
         <li><a href="/Ferretti-Hair-Design/location.html">Location</a></li>
 	</ul>
     
