changed min and max-width of index body

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 }
 body {
 	background-color: #666;
-	width: 1250px;
+	max-width: 1250px;
+	min-width: 1100px;
 	margin: auto;
 }
 * {
@@ -138,7 +139,7 @@ body {
 	height: 600px;
 }
 .cover {
-	object-fix: contain;
+	object-fit: cover;
 }
 #slider {
 	opacity: 1;
