rearraged some things for mobile

--- a/index.html
+++ b/index.html
@@ -154,6 +154,48 @@ body {
 #slider.fadeOut {
 	opacity: 0;
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+        max-width: 600px;
+		min-width: 600px;
+    }
+	#phone {
+	position: absolute;
+	padding-top: 0%;
+	padding-bottom: 0%;
+	margin-top: 150px;
+	margin-bottom: 5px;
+	width: 300px;
+	margin-left: 150px;
+	margin-right: 150px;
+	text-align: center;
+}
+	.column {
+	width: 100%;
+}
+.columnTwo {
+width: 100%;	
+}
+#facebookIcon {
+	margin-right: 225px;
+	margin-top: 50px;
+}
+#instagramIcon {
+	margin-left: 0px;
+	margin-top: 50px;
+}
+#imageContainer {
+	width: 400px;
+	height: 480px;
+}
+#slider {
+	width: 400px;
+	height: 480px;
+}
+
+}
+
 </style>
 <script type = "text/javascript">
       var imgArray = [
