--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ body {
 	opacity: 0;
 }
 
-/*@media only screen and (min-width: 750px) {
+@media only screen and (min-width: 1000px) {
     body {
 		width: 1250px;
     }
@@ -195,7 +195,7 @@ float: left;
 	height: 600px;
 }
 
-}*/
+}
 
 </style>
 <script type = "text/javascript">
