some minor changes top of page for mobile

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Ferretti Hair Design - Home</title>
 <link rel="icon" href="favicon.ico">
-
 <style>
 @font-face {
 	font-family: Elsie;
@@ -24,17 +23,16 @@
 }
 body {
 	background-color: #666;
-	width: 750px;
+	width: 95%;
+	min-width: 600px;
 	margin: auto;
 }
 * {
 	box-sizing: border-box;
 }
 .column {
-	
 }
 .columnTwo {
-	
 }
 .row:after {
 	content: "";
@@ -42,19 +40,16 @@ body {
 	clear: both;
 }
 #phone {
-	
-	font-size: 32px;
+	font-size: 4vw;
 	font-family: ElsieRegular;
 	color: white;
-	
 	position: absolute;
 	padding-top: 0%;
 	padding-bottom: 0%;
-	margin-top: 150px;
-	margin-bottom: 5px;
-	width: 300px;
-	margin-left: 150px;
-	margin-right: 150px;
+	margin-top: 23vw;
+	margin-bottom: 0px;
+	width: 95%;
+	min-width: 570px;
 	text-align: center;
 }
 #logo {
@@ -63,22 +58,23 @@ body {
 	padding-bottom: 0%;
 	margin-left: auto;
 	margin-right: auto;
-	width: 300px;
+	width: 50vw;
+	height: auto;
 	pointer-events: none;
 }
 #facebookIcon {
 	display: block;
 	height: auto;
-	width: 50px;
-	margin-right: 225px;
-	margin-top: 50px;
+	width: 6vw;
+	margin-right: 41%;
+	margin-top: 6.75vw;
 }
 #instagramIcon {
 	display: block;
 	height: auto;
-	width: 50px;
-	margin-right: 50px;
-	margin-top: 50px;
+	width: 6vw;
+	margin-right: 5%;
+	margin-top: 6.75vw;
 }
 #nav {
 	border: solid #ccc;
@@ -112,6 +108,7 @@ body {
 	background-color: #F0F;
 }
 #container {
+	min-width: 600px;
 	border-radius: 20px;
 	display: block;
 	margin: auto;
@@ -157,34 +154,39 @@ body {
 #slider.fadeOut {
 	opacity: 0;
 }
-
-@media only screen and (min-width: 1000px) {
-    body {
-		width: 1250px;
-    }
-	#phone {
-		text-align: left;
+ @media only screen and (min-width: 1000px) {
+body {
+	width: 1250px;
+}
+#phone {
+	font-size: 32px;
+	text-align: left;
 	display: block;
 	margin-left: 100px;
 	margin-top: 75px;
 }
-	.column {
+#logo {
+	width: 300px;
+}
+.column {
 	float: left;
 	width: 33.33%;
 	padding: 1px;
 }
 .columnTwo {
-float: left;
+	float: left;
 	width: 50%;
 	padding: 1px;
 }
 #facebookIcon {
 	margin-right: 100px;
 	margin-top: 75px;
+	width: 50px;
 }
 #instagramIcon {
 	margin-right: 50px;
 	margin-top: 75px;
+	width: 50px;
 }
 #imageContainer {
 	width: 500px;
@@ -194,9 +196,7 @@ float: left;
 	width: 500px;
 	height: 600px;
 }
-
 }
-
 </style>
 <script type = "text/javascript">
       var imgArray = [
