textContainer and image adjustments for mobile

--- a/index.html
+++ b/index.html
@@ -119,37 +119,40 @@ body {
 #textContainer {
 	display: block;
 	margin-left: auto;
-	margin-top: 125px;
+	margin-right: auto;
+	margin-top: 4vw;
 	padding-top: 40px;
-	margin-right: 50px;
-	height: 300px;
+	height: auto;
 	vertical-align: middle;
 	text-align: center;
 	font-family: SansationLight;
-	line-height: 40px;
-	font-size: 29px;
+	line-height: 1.3em;
+	font-size: 6vw;
 }
 #imageContainer {
 	border: 1px solid #ccc;
 	border-radius: 20px;
 	display: block;
 	margin-top: 50px;
-	margin-left: 50px;
-	width: 400px;
-	height: 480px;
+	margin-left: auto;
+	margin-right: auto;
+	width: 80vw;
+	height: 96vw;
 }
 .cover {
 	object-fit: cover;
 }
 #slider {
-	width: 400px;
-	height: 480px;
 	opacity: 1;
 	transition: opacity 1s;
 	object-fit: cover;
 	border: 2px solid #ccc;
 	border-radius: 20px;
 	pointer-events: none;
+	margin-left: auto;
+	margin-right: auto;
+	width: 80vw;
+	height: 96vw;
 }
 #slider.fadeOut {
 	opacity: 0;
@@ -191,10 +194,20 @@ body {
 #imageContainer {
 	width: 500px;
 	height: 600px;
+	margin-left: 50px;
 }
 #slider {
 	width: 500px;
 	height: 600px;
+	margin-left: 0px;
+}
+#textContainer {
+	margin-top: 125px;
+	padding-top: 40px;
+	margin-right: 50px;
+	height: 300px;
+	line-height: 40px;
+	font-size: 29px;
 }
 }
 </style>
@@ -240,7 +253,7 @@ slideShow();
   </div>
   <div class="columnTwo">
     <div id="textContainer"><font color=white> Ferretti Hair Design is a home based hair studio that also provides mobile hair services to the Bathurst Manor and surrounding areas. Ferretti Hair Design keeps current with the latest trends and provides full service at affordable prices.</font></div>
-    <div id="textContainer" style="margin-top:0"><font color=white> Please call ahead to book an appointment!</font></div>
+    <div id="textContainer" style="margin-top:1vw"><font color=white> Please call ahead to book an appointment!</font></div>
   </div>
 </div>
 <p><font color=white style="font-size: 12px; font-family: ElsieRegular;">
