--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@ body {
 }
 #nav a {
 	display: inline-block;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 20px;
-	padding-right: 20px;
+	padding-top: 1vw;
+	padding-bottom: 1vw;
+	padding-left: 1.5vw;
+	padding-right: 1.5vw;
 	text-decoration: none;
 	background-color: #333;
 	font-family: Elsie;
 	color: white;
-	font-size: 32px;
+	font-size: 5vw;
 	letter-spacing: 0.25em;
 }
 #nav a:hover, a:active {
@@ -195,6 +195,13 @@ body {
 	width: 500px;
 	height: 600px;
 	margin-left: 50px;
+}
+#nav a {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 20px;
+	padding-right: 20px;
+	font-size: 32px;
 }
 #slider {
 	width: 500px;
