--- a/location.html
+++ b/location.html
@@ -119,13 +119,27 @@ body {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 0vw;
+	margin-top: -5vw;
 	height: auto;
 	vertical-align: middle;
 	text-align: center;
 	font-family: SansationLight;
 	line-height: 1.3em;
 	font-size: 4vw;
+}
+#titleText {
+	margin:auto; 
+	margin-top: 50px; 
+	text-align: center; 
+	font-family: ElsieRegular;
+	font-size: 7vw;
+	color: white;
+	width: 100%;
+}
+#map {
+	width: 80vw;
+	height: 65vw;
+	
 }
  @media only screen and (min-width: 1000px) {
 body {
@@ -164,12 +178,18 @@ body {
 	font-size: 32px;
 }
 #textContainer {
-	margin-top: 125px;
+	margin-top: -75px;
 	padding-top: 40px;
-	margin-right: 50px;
-	height: 300px;
+	height: 150px;
 	line-height: 40px;
 	font-size: 29px;
+}
+#titleText {
+	font-size: 46px;
+}
+#map {
+	width: 733px;
+	height: 550px;
 }
 }
 </style>
@@ -187,11 +207,11 @@ body {
         <li><a href="/Ferretti-Hair-Design/services.html">Services</a></li>
         <li><a href="/Ferretti-Hair-Design/location.html">Location</a></li>
       </ul>
-<div style="margin:auto; margin-top: 50px; text-align: center; font-family: ElsieRegular;  width: 200px;"> <font color=white style="font-size: 46px;">Location</font> </div>
+<div id="titleText">Location</font> </div>
 <br />
 <center>
         <br />
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1386.4492802780233!2d-79.45994639384341!3d43.75707938782417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b320618aa81d5%3A0x266882c031dba700!2sBrighton+Ave+%26+Honiton+St%2C+Toronto%2C+ON!5e0!3m2!1sen!2sca!4v1531243443484" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1386.4492802780233!2d-79.45994639384341!3d43.75707938782417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b320618aa81d5%3A0x266882c031dba700!2sBrighton+Ave+%26+Honiton+St%2C+Toronto%2C+ON!5e0!3m2!1sen!2sca!4v1531243443484" frameborder="0" style="border:0;" allowfullscreen></iframe>
       </center>
 <br />
 <p><font color=white style="font-size: 12px; font-family: ElsieRegular;">
