--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body {
 	position: absolute;
 	padding-top: 0%;
 	padding-bottom: 0%;
-	margin-top: 23vw;
+	margin-top: 25vw;
 	margin-bottom: 0px;
 	width: 95%;
 	min-width: 570px;
@@ -67,14 +67,15 @@ body {
 	height: auto;
 	width: 6vw;
 	margin-right: 41%;
-	margin-top: 6.75vw;
+	margin-top: 10vw;
 }
 #instagramIcon {
 	display: block;
 	height: auto;
 	width: 6vw;
 	margin-right: 5%;
-	margin-top: 6.75vw;
+	margin-top: 10vw;
+	margin-bottom: 3.5vw;
 }
 #nav {
 	border: solid #ccc;
@@ -189,6 +190,7 @@ body {
 #instagramIcon {
 	margin-right: 50px;
 	margin-top: 75px;
+	margin-bottom: 0px;
 	width: 50px;
 }
 #imageContainer {
