--- a/services.html
+++ b/services.html
@@ -247,10 +247,10 @@ body {
 <hr color=white width=65% style="border-width: 1px;"/>
 <div class="row">
         <div class="columnTwo">
-    <div class="textContainer"><b>Balyeage</b><br />
+    <div class="textContainer"><b>Balayeage</b><br />
             <font style="font-size: 26px;">$120.00 and up </div>
     </font> </div>
-        <div class="columnTwo"> <img class="imgContainer" src='images/balyeage.jpg' /> </div>
+        <div class="columnTwo"> <img class="imgContainer" src='images/balayeage.jpg' /> </div>
       </div>
 <hr color=white width=65% style="border-width: 1px;"/>
 <div class="row">
