fixed font size/spacing for mobile version

--- a/services.html
+++ b/services.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-      <head>
-      <link rel="shortcut icon" href="favicon.ico"/>
-      <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-      <title>Ferretti Hair Design - Services</title>
-      <style>
-
+<head>
+<link rel="shortcut icon" href="favicon.ico"/>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Ferretti Hair Design - Services</title>
+<style>
 @font-face {
 	font-family: Elsie;
 	src: url('fonts/ElsieSwashCaps-Black.ttf');
@@ -25,7 +24,7 @@
 body {
 	background-color: #666;
 	width: 95%;
-	min-width: 800px;
+	/*min-width: 800px;*/
 	margin: auto;
 }
 * {
@@ -120,28 +119,33 @@ body {
 	margin-bottom: 25px;
 	background-color: black;
 }
+.horizontalRule {
+	width: 90%;
+	border-width: 0.2vw;	
+}
 .textContainer {
 	display: block;
 	margin-top: 15px;
 	margin-bottom: 15px;
 	padding-top: 15px;
-	margin-left: 250px;
-	margin-right: auto;
-	height: 100px;
+	margin-left: 10%;
+	margin-right: 40%;
+	height: 100px;/*75%;*/
 	width: 600px;
 	vertical-align: middle;
 	text-align: left;
 	font-family: Oranienbaum;
+	font-size: 5vw;
 	line-height: 30px;
 }
 .smallerFont {
-	font-size: 3vw;
+	font-size:3.5vw;
 }
 .imgContainer {
 	display: block;
 	padding-top: 15px;
 	float: right;
-	margin-right: 250px;
+	margin-right: 10%;
 	width: 100px;
 	height: auto;
 }
@@ -185,6 +189,10 @@ body {
 #titleText {
 	font-size: 46px;
 }
+.horizontalRule {
+	width: 65%;
+	border-width: 1px;	
+}
 .textContainer {
 	display: block;
 	margin-top: 15px;
@@ -197,7 +205,11 @@ body {
 	vertical-align: middle;
 	text-align: left;
 	font-family: Oranienbaum;
+	font-size: 32px;
 	line-height: 30px;
+}
+.smallerFont {
+	font-size: 26px;
 }
 .imgContainer {
 	display: block;
@@ -209,7 +221,6 @@ body {
 }
 }
 </style>
-
 </head>
 
 <body onload="slideShow()">
@@ -224,115 +235,112 @@ body {
   <li><a href="/Ferretti-Hair-Design/services.html">Services</a></li>
   <li><a href="/Ferretti-Hair-Design/location.html">Location</a></li>
 </ul>
-
-
 <div style="margin:auto; margin-top: 50px; text-align: center; font-family: ElsieRegular;  width: 200px;"> <font color=white style="font-size: 46px;">Services</font> </div>
 <div style="margin:auto; margin-top: 25px; margin-bottom: 15px; padding-bottom: 25px; text-align: center; font-family: Oranienbaum; border-bottom: solid white 0.1vw; width: 75%;"> <i><font color=white style="font-size: 26px;">All services include stress relieve scalp massage and blowdry</font></i> </div>
-<font color=white style="font-size: 32px;">
+<font color=white>
 <div class="row">
-        <div class="columnTwo">
+  <div class="columnTwo">
     <div class="textContainer"><b>Split End Treatment</b><br />
-            <font style="font-size: 26px;">$20.00 </div>
+      <font class="smallerFont">$20.00 </div>
     </font> </div>
-        <div class="columnTwo"> <img class="imgContainer" src='images/splitEnd.jpg' /> </div>
-      </div>
-<hr color=white width=65% style="border-width: 1px;"/>
+  <div class="columnTwo"> <img class="imgContainer" src='images/splitEnd.jpg' /> </div>
+</div>
+<hr class="horizontalRule"/>
 <div class="row" style="margin-top: 15px;">
-        <div class="columnTwo">
+  <div class="columnTwo">
     <div class="textContainer"><b>Conditioning Treatments</b><br />
-            <font style="font-size: 26px;">$25.00 and up </div>
+      <font class="smallerFont">$25.00 and up </div>
     </font> </div>
-        <div class="columnTwo"> <img class="imgContainer" src='images/conditioning.jpg' /> </div>
-      </div>
-<hr color=white width=65% style="border-width: 1px;"/>
+  <div class="columnTwo"> <img class="imgContainer" src='images/conditioning.jpg' /> </div>
+</div>
+<hr class="horizontalRule"/>
 <div class="row">
-        <div class="columnTwo">
+  <div class="columnTwo">
     <div class="textContainer"><b>Balayeage</b><br />
-            <font style="font-size: 26px;">$120.00 and up </div>
+      <font class="smallerFont">$120.00 and up </div>
     </font> </div>
-        <div class="columnTwo"> <img class="imgContainer" src='images/balayeage.jpg' /> </div>
-      </div>
-<hr color=white width=65% style="border-width: 1px;"/>
+  <div class="columnTwo"> <img class="imgContainer" src='images/balayeage.jpg' /> </div>
+</div>
+<hr class="horizontalRule"/>
 <div class="row">
-        <div class="columnTwo">
+  <div class="columnTwo">
     <div class="textContainer"><b>Permanent Wave</b><br />
-            <font style="font-size: 26px;">$125.00 and up depending on length of hair </div>
+      <font class="smallerFont">$125.00 and up depending on length of hair </div>
     </font> </div>
-        <div class="columnTwo"> <img class="imgContainer" src='images/permanentWave.jpg' /> </div>
-      </div>
-<hr color=white width=65% style="border-width: 1px;"/>
+  <div class="columnTwo"> <img class="imgContainer" src='images/permanentWave.jpg' /> </div>
+</div>
+<hr class="horizontalRule"/>
 <div class="row">
-        <div class="columnTwo">
+  <div class="columnTwo">
     <div class="textContainer"><b>Full Head Hightlights</b><br />
-            <font style="font-size: 26px;">$120.00 and up depending on length of hair </div>
+      <font class="smallerFont">$120.00 and up depending on length of hair </div>
     </font> </div>
-        <div class="columnTwo"> <img class="imgContainer" src='images/fullHead.jpg' /> </div>
-      </div>
-<hr color=white width=65% style="border-width: 1px;"/>
+  <div class="columnTwo"> <img class="imgContainer" src='images/fullHead.jpg' /> </div>
+</div>
+<hr class="horizontalRule"/>
 <div class="row">
-        <div class="columnTwo">
+  <div class="columnTwo">
     <div class="textContainer"><b>Half Head Highlights</b><br />
-            <font style="font-size: 26px;">$90.00 and up depending on length of hair </div>
+      <font class="smallerFont">$90.00 and up depending on length of hair </div>
     </font> </div>
-        <div class="columnTwo"> <img class="imgContainer" src='images/halfHead.jpg' /> </div>
-      </div>
-<hr color=white width=65% style="border-width: 1px;"/>
+  <div class="columnTwo"> <img class="imgContainer" src='images/halfHead.jpg' /> </div>
+</div>
+<hr class="horizontalRule"/>
 <div class="row">
-        <div class="columnTwo">
+  <div class="columnTwo">
     <div class="textContainer"><b>Partial Highlights</b><br />
-            <font style="font-size: 26px;">$70.00 </div>
+      <font class="smallerFont">$70.00 </div>
     </font> </div>
-        <div class="columnTwo"> <img class="imgContainer" src='images/partialHighlights.jpg' /> </div>
-      </div>
-<hr color=white width=65% style="border-width: 1px;"/>
+  <div class="columnTwo"> <img class="imgContainer" src='images/partialHighlights.jpg' /> </div>
+</div>
+<hr class="horizontalRule"/>
 <div class="row">
-        <div class="columnTwo">
+  <div class="columnTwo">
     <div class="textContainer"><b>Single Process Colour</b><br />
-            <font style="font-size: 26px;">$55.00 </div>
+      <font class="smallerFont">$55.00 </div>
     </font> </div>
-        <div class="columnTwo"> <img class="imgContainer" src='images/singleProcess.jpg' /> </div>
-      </div>
-<hr color=white width=65% style="border-width: 1px;"/>
+  <div class="columnTwo"> <img class="imgContainer" src='images/singleProcess.jpg' /> </div>
+</div>
+<hr class="horizontalRule"/>
 <div class="row">
-        <div class="columnTwo">
+  <div class="columnTwo">
     <div class="textContainer"><b>Updo</b><br />
-            <font style="font-size: 26px;">Starting at $50.00 </div>
+      <font class="smallerFont">Starting at $50.00 </div>
     </font> </div>
-        <div class="columnTwo"> <img class="imgContainer" src='images/updo.jpg' /> </div>
-      </div>
-<hr color=white width=65% style="border-width: 1px;"/>
+  <div class="columnTwo"> <img class="imgContainer" src='images/updo.jpg' /> </div>
+</div>
+<hr class="horizontalRule"/>
 <div class="row">
-        <div class="columnTwo">
+  <div class="columnTwo">
     <div class="textContainer"><b>Shampoo and Blowdry</b><br />
-            <font style="font-size: 26px;">$25.00 short hair | $35.00 long hair </div>
+      <font class="smallerFont">$25.00 short hair | $35.00 long hair </div>
     </font> </div>
-        <div class="columnTwo"> <img class="imgContainer" src='images/shampooAndBlowdry.jpg' /> </div>
-      </div>
-<hr color=white width=65% style="border-width: 1px;"/>
+  <div class="columnTwo"> <img class="imgContainer" src='images/shampooAndBlowdry.jpg' /> </div>
+</div>
+<hr class="horizontalRule"/>
 <div class="row" style="margin-top: 15px;">
-        <div class="columnTwo">
+  <div class="columnTwo">
     <div class="textContainer"><b>Women's Haircut</b><br />
-            <font style="font-size: 26px;">$55.00 </div>
+      <font class="smallerFont">$55.00 </div>
     </font> </div>
-        <div class="columnTwo"> <img class="imgContainer" src='images/womans.jpg' /> </div>
-      </div>
-<hr color=white width=65% style="border-width: 1px;"/>
+  <div class="columnTwo"> <img class="imgContainer" src='images/womans.jpg' /> </div>
+</div>
+<hr class="horizontalRule"/>
 <div class="row" style="margin-top: 15px;">
-        <div class="columnTwo">
+  <div class="columnTwo">
     <div class="textContainer"><b>Men's Haircut</b><br />
-            <font style="font-size: 26px;">$25.00 </div>
+<font class="smallerFont">$25.00 </div>
     </font> </div>
-        <div class="columnTwo"> </div>
-      </div>
-<hr color=white width=65% style="border-width: 1px;"/>
+  <div class="columnTwo"> </div>
+</div>
+<hr class="horizontalRule"/>
 <div class="row" style="margin-top: 15px;">
-        <div class="columnTwo">
+  <div class="columnTwo">
     <div class="textContainer"><b>Children's Haircut (10 and under)</b><br />
-            <font style="font-size: 26px;">$20.00 </div>
+      <font class="smallerFont">$20.00 </div>
     </font> </div>
-        <div class="columnTwo"> </div>
-      </div>
-
+  <div class="columnTwo"> </div>
+</div>
 <p><font color=white style="font-size: 12px; font-family: ElsieRegular;">
   <center>
     <br />
