adjusted line height for mobile

--- a/services.html
+++ b/services.html
@@ -136,7 +136,7 @@ body {
 	text-align: left;
 	font-family: Oranienbaum;
 	font-size: 5vw;
-	line-height: 30px;
+	line-height: 90%;
 }
 .smallerFont {
 	font-size:3.5vw;
