reordered and added a couple of missing services

--- a/services.html
+++ b/services.html
@@ -240,18 +240,18 @@ body {
 <font color=white>
 <div class="row">
   <div class="columnTwo">
-    <div class="textContainer"><b>Split End Treatment</b><br />
-      <font class="smallerFont">$20.00 </div>
+    <div class="textContainer"><b>Women's Haircut</b><br />
+      <font class="smallerFont">$55.00 </div>
     </font> </div>
-  <div class="columnTwo"> <img class="imgContainer" src='images/splitEnd.jpg' /> </div>
+  <div class="columnTwo"> <img class="imgContainer" src='images/womans.jpg' /> </div>
 </div>
 <hr class="horizontalRule"/>
-<div class="row" style="margin-top: 15px;">
+<div class="row">
   <div class="columnTwo">
-    <div class="textContainer"><b>Conditioning Treatments</b><br />
-      <font class="smallerFont">$25.00 and up </div>
+    <div class="textContainer"><b>Shampoo and Blowdry</b><br />
+      <font class="smallerFont">$25.00 short hair | $35.00 long hair </div>
     </font> </div>
-  <div class="columnTwo"> <img class="imgContainer" src='images/conditioning.jpg' /> </div>
+  <div class="columnTwo"> <img class="imgContainer" src='images/shampooAndBlowdry.jpg' /> </div>
 </div>
 <hr class="horizontalRule"/>
 <div class="row">
@@ -260,14 +260,6 @@ body {
       <font class="smallerFont">$120.00 and up </div>
     </font> </div>
   <div class="columnTwo"> <img class="imgContainer" src='images/balayeage.jpg' /> </div>
-</div>
-<hr class="horizontalRule"/>
-<div class="row">
-  <div class="columnTwo">
-    <div class="textContainer"><b>Permanent Wave</b><br />
-      <font class="smallerFont">$125.00 and up depending on length of hair </div>
-    </font> </div>
-  <div class="columnTwo"> <img class="imgContainer" src='images/permanentWave.jpg' /> </div>
 </div>
 <hr class="horizontalRule"/>
 <div class="row">
@@ -304,26 +296,42 @@ body {
 <hr class="horizontalRule"/>
 <div class="row">
   <div class="columnTwo">
-    <div class="textContainer"><b>Updo</b><br />
-      <font class="smallerFont">Starting at $50.00 </div>
+    <div class="textContainer"><b>Permanent Wave</b><br />
+      <font class="smallerFont">$125.00 and up depending on length of hair </div>
     </font> </div>
-  <div class="columnTwo"> <img class="imgContainer" src='images/updo.jpg' /> </div>
+  <div class="columnTwo"> <img class="imgContainer" src='images/permanentWave.jpg' /> </div>
 </div>
 <hr class="horizontalRule"/>
 <div class="row">
   <div class="columnTwo">
-    <div class="textContainer"><b>Shampoo and Blowdry</b><br />
-      <font class="smallerFont">$25.00 short hair | $35.00 long hair </div>
+    <div class="textContainer"><b>Hair Extensions</b><br />
+      <font class="smallerFont">Price determined upon consultation | 3 hours </div>
     </font> </div>
-  <div class="columnTwo"> <img class="imgContainer" src='images/shampooAndBlowdry.jpg' /> </div>
+  <div class="columnTwo"> <img class="imgContainer" src='images/hairExtensions.jpg' /> </div>
 </div>
 <hr class="horizontalRule"/>
 <div class="row" style="margin-top: 15px;">
   <div class="columnTwo">
-    <div class="textContainer"><b>Women's Haircut</b><br />
-      <font class="smallerFont">$55.00 </div>
+    <div class="textContainer"><b>Split End Treatment</b><br />
+      <font class="smallerFont">$20.00 </div>
     </font> </div>
-  <div class="columnTwo"> <img class="imgContainer" src='images/womans.jpg' /> </div>
+  <div class="columnTwo"> <img class="imgContainer" src='images/splitEnd.jpg' /> </div>
+</div>
+<hr class="horizontalRule"/>
+<div class="row" style="margin-top: 15px;">
+  <div class="columnTwo">
+    <div class="textContainer"><b>Smoothing Systems</b><br />
+      <font class="smallerFont">$200.00 and up depending on length of hair</div>
+    </font> </div>
+  <div class="columnTwo"> <img class="imgContainer" src='images/smoothingSystems.jpg' /> </div>
+</div>
+<hr class="horizontalRule"/>
+<div class="row">
+  <div class="columnTwo">
+    <div class="textContainer"><b>Updo</b><br />
+      <font class="smallerFont">Starting at $50.00 </div>
+    </font> </div>
+  <div class="columnTwo"> <img class="imgContainer" src='images/updo.jpg' /> </div>
 </div>
 <hr class="horizontalRule"/>
 <div class="row" style="margin-top: 15px;">
